--- a/app/src/main/res/layout/event_viewqr.xml
+++ b/app/src/main/res/layout/event_viewqr.xml
@@ -61,6 +61,18 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
+            <Button
+                android:id="@+id/reuse_qr"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Reuse QR Code"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/share_qr" />
+
+
+
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </LinearLayout>
