--- a/app/src/main/res/layout/profile_page_updated.xml
+++ b/app/src/main/res/layout/profile_page_updated.xml
@@ -56,7 +56,7 @@
                 <TextView
                         android:text=" | "
                         android:layout_width="0dp"
-                        android:layout_height="wrap_content" android:id="@+id/textView5" android:layout_weight="0.1"
+                        android:layout_height="wrap_content" android:id="@+id/middleSeperator" android:layout_weight="0.1"
                         android:textAlignment="center"/>
                 <TextView
                         android:id="@+id/edit_homepage"
