--- a/app/src/main/res/layout/home_fragment.xml
+++ b/app/src/main/res/layout/home_fragment.xml
@@ -5,69 +5,41 @@
                                                    android:layout_width="match_parent"
                                                    android:layout_height="match_parent">
 
-<!--    <androidx.constraintlayout.widget.ConstraintLayout-->
-<!--            android:id="@+id/topLayout"-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            app:layout_constraintTop_toTopOf="parent">-->
+    <com.google.android.material.appbar.AppBarLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:fitsSystemWindows="true" app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
+            android:id="@+id/appBarLayout2">
 
-<!--        &lt;!&ndash; "Notifications" Button &ndash;&gt;-->
-<!--        <ImageButton-->
-<!--                android:id="@+id/btnNotifications"-->
-<!--                style="@android:style/Widget.Material.ImageButton"-->
-<!--                android:layout_width="48dp"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:layout_marginStart="16dp"-->
-<!--                android:layout_marginTop="16dp"-->
-<!--                android:adjustViewBounds="true"-->
-<!--                android:background="@android:color/transparent"-->
-<!--                android:cropToPadding="false"-->
-<!--                android:scaleType="fitCenter"-->
-<!--                android:src="@drawable/bell_notification"-->
-<!--                app:layout_constraintStart_toStartOf="parent"-->
-<!--                app:layout_constraintTop_toTopOf="parent"/>-->
+        <com.google.android.material.appbar.CollapsingToolbarLayout
+                style="?attr/collapsingToolbarLayoutMediumStyle"
+                android:layout_width="match_parent"
+                android:layout_height="?attr/collapsingToolbarLayoutMediumSize">
 
-<!--        &lt;!&ndash; "Profile" Button &ndash;&gt;-->
-<!--        <ImageButton-->
-<!--                android:id="@+id/btnProfile"-->
-<!--                style="@android:style/Widget.Material.ImageButton"-->
-<!--                android:layout_width="48dp"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:layout_marginTop="16dp"-->
-<!--                android:layout_marginEnd="16dp"-->
-<!--                android:adjustViewBounds="true"-->
-<!--                android:background="@android:color/transparent"-->
-<!--                android:cropToPadding="true"-->
-<!--                android:scaleType="fitCenter"-->
-<!--                android:src="@drawable/profile_circle"-->
-<!--                app:layout_constraintBottom_toBottomOf="parent"-->
-<!--                app:layout_constraintEnd_toEndOf="parent"-->
-<!--                app:layout_constraintTop_toTopOf="parent"/>-->
+            <com.google.android.material.appbar.MaterialToolbar
+                android:layout_width="match_parent"
+                android:layout_height="?attr/actionBarSize"
+                android:elevation="0dp" app:title="Welcome, %s!"
+                app:menu="@menu/main_page_topbar_menu"
+                app:itemIconTint="?attr/colorOnBackground">
 
+            </com.google.android.material.appbar.MaterialToolbar>
 
-<!--        <TextView-->
-<!--                android:id="@+id/main_admin_page_AdminTxt"-->
-<!--                android:layout_width="wrap_content"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:layout_marginTop="16dp"-->
-<!--                android:fontFamily="@font/coustard"-->
-<!--                android:text="PlaceHolder"-->
-<!--                android:textAppearance="@style/TextAppearance.AppCompat.Display1"-->
-<!--                app:layout_constraintBottom_toBottomOf="parent"-->
-<!--                app:layout_constraintEnd_toStartOf="@+id/btnProfile"-->
-<!--                app:layout_constraintStart_toEndOf="@+id/btnNotifications"-->
-<!--                app:layout_constraintTop_toTopOf="parent"/>-->
+        </com.google.android.material.appbar.CollapsingToolbarLayout>
 
-<!--    </androidx.constraintlayout.widget.ConstraintLayout>-->
+    </com.google.android.material.appbar.AppBarLayout>
 
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
             android:id="@+id/swipeRefreshLayout"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.0">
+            tools:layout_editor_absoluteY="112dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/appBarLayout2">
 
-        <!-- List of Joined Events -->
         <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/listJoinedEvents"
                 android:layout_width="match_parent"
@@ -75,22 +47,16 @@
                 android:layout_marginTop="10dp"/>
 
 
-        <!-- List of Created Events -->
-<!--        <androidx.recyclerview.widget.RecyclerView-->
-<!--                android:id="@+id/listCreatedEvents"-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:layout_marginTop="10dp"/>-->
     </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
-        <!-- "Create New Event" Button -->
-        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
-                android:id="@+id/btnCreateEvent"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="bottom|end"
-                android:layout_margin="16dp"
-                android:text="Create New Event"
-                app:icon="@drawable/add_icon"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent" />/>
+    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
+            android:id="@+id/btnCreateEvent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom|end"
+            android:layout_margin="16dp"
+            android:text="Create New Event"
+            app:icon="@drawable/add_icon"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
