--- a/app/src/main/res/layout/reuse_qr.xml
+++ b/app/src/main/res/layout/reuse_qr.xml
@@ -40,4 +40,15 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"/>
 
+    <!-- Button to reuse QR code -->
+    <Button
+        android:id="@+id/reuse_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Reuse QR Code"
+        app:layout_constraintTop_toBottomOf="@id/event_name_text_view"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginTop="16dp"
+        android:layout_marginStart="16dp"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
