--- a/app/src/main/res/layout/admin_mainpage.xml
+++ b/app/src/main/res/layout/admin_mainpage.xml
@@ -24,11 +24,13 @@
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/admin_main_bottombar"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:labelVisibilityMode="labeled"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
         app:menu="@menu/admin_main_page_menu" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
