--- a/app/src/main/res/layout/admin_event_card.xml
+++ b/app/src/main/res/layout/admin_event_card.xml
@@ -9,23 +9,13 @@
     <androidx.cardview.widget.CardView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        app:cardElevation="4dp"
         app:cardCornerRadius="8dp">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="194dp"
             android:layout_height="match_parent">
 
-            <TextView
-                android:id="@+id/admin_event_card_event_name"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="36dp"
-                android:fontFamily="@font/coustard"
-                android:text="Event Name"
-                android:textStyle="bold"
-                app:layout_constraintEnd_toStartOf="@+id/admin_event_card_menu"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
 
             <ImageView
                 android:id="@+id/admin_event_card_menu"
@@ -34,6 +24,18 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:srcCompat="@drawable/triple_dot" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                android:padding="6dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.0">
 
             <ImageView
                 android:id="@+id/admin_event_card_poster"
@@ -58,86 +60,118 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/admin_event_card_poster" />
 
-            <TextView
-                android:id="@+id/admin_event_card_event_date"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                android:fontFamily="@font/coustard"
-                android:text="Event Date"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/admin_event_card_event_id" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="0.4"
+                android:orientation="horizontal">
 
-            <TextView
-                android:id="@+id/admin_event_card_event_location"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="4dp"
-                android:fontFamily="@font/coustard"
-                android:text="Location"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/admin_event_card_event_date" />
+                <TextView
+                    android:id="@+id/admin_event_card_event_name"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:text="Event Name"
+                    android:fontFamily="@font/coustard"
+                    android:layout_weight="13"
+                    android:textSize="15sp"
+                    android:textStyle="bold" />
 
-            <TextView
-                android:id="@+id/admin_event_card_registered"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:fontFamily="@font/coustard"
-                android:text="Registered:"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/admin_event_card_event_location" />
+                <ImageView
+                    android:id="@+id/imageView2"
+                    android:layout_height="match_parent"
+                    android:layout_marginLeft="10dp"
+                    android:layout_weight="1.5"
+                    android:layout_width="0dp"
+                    android:src="@drawable/liked_heart"/>
+                <TextView
+                    android:id="@+id/admin_event_card_registered_num"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:fontFamily="@font/coustard"
+                    android:textSize="12sp"
+                    android:text="23" />
+            </LinearLayout>
 
-            <TextView
-                android:id="@+id/admin_event_card_attending"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
-                android:fontFamily="@font/coustard"
-                android:text="Attending:"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/admin_event_card_registered" />
 
-            <TextView
-                android:id="@+id/admin_event_card_registered_num"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="12dp"
-                android:text="0000"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/admin_event_card_registered"
-                app:layout_constraintTop_toBottomOf="@+id/admin_event_card_event_location" />
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="0.4"
+                    android:orientation="horizontal">
 
-            <TextView
-                android:id="@+id/admin_event_card_attending_num"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="5dp"
-                android:text="0000"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/admin_event_card_attending"
-                app:layout_constraintTop_toBottomOf="@+id/admin_event_card_registered_num" />
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:padding="0dp"
+                        android:scaleType="fitCenter"
+                        android:src="@drawable/map_pin"
+                        app:tint="?android:attr/textColorSecondaryInverse" />
 
-            <TextView
-                android:id="@+id/admin_event_card_event_description"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed scelerisque dui dui, vitae dapibus est suscipit id. Donec ut luctus est, ac dignissim justo. Morbi nib.."
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/admin_event_card_attending" />
+                    <TextView
+                        android:id="@+id/admin_event_card_event_location"
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_weight="10"
+                        android:fontFamily="@font/coustard"
+                        android:text="Edmonton, AB"
+                        android:textColor="#ABA4A4"
+                        android:textSize="12sp" />
 
-            <TextView
-                android:id="@+id/admin_event_card_organizer"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
-                android:text="Organized by: John Doe"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/admin_event_card_event_description" />
+                    <ImageView
+                        android:id="@+id/imageView4"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+
+                        android:padding="2dp"
+                        android:scaleType="fitCenter"
+                        app:srcCompat="@drawable/baseline_attendee_black" />
+
+                    <TextView
+                        android:id="@+id/admin_event_card_attending_num"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="@font/coustard"
+                        android:text="6"
+                        android:textSize="12sp" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="0dp"
+                    android:layout_weight="0.4"
+                    android:orientation="horizontal">
+
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:padding="0dp"
+                        android:scaleType="fitCenter"
+                        android:src="@drawable/calendar"
+                        app:tint="?android:attr/textColorSecondaryInverse" />
+
+                    <TextView
+                        android:id="@+id/admin_event_card_event_date"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:fontFamily="@font/coustard"
+                        android:text="March 8, 2024"
+                        android:textColor="#ABA4A4"
+                        android:textSize="12sp" />
+                </LinearLayout>
+
+                <TextView
+                    android:id="@+id/admin_event_card_organizer"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="5dp"
+                    android:fontFamily="@font/coustard"
+                    android:text="Organized by: John Doe"
+                    android:textSize="12sp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/admin_event_card_event_description" />
+            </LinearLayout>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
