--- a/app/src/main/res/layout/event_vieweventdetails.xml
+++ b/app/src/main/res/layout/event_vieweventdetails.xml
@@ -130,7 +130,7 @@
         android:paddingEnd="8dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/event_view_poster"
-        app:srcCompat="@drawable/baseline_attendance_24" />
+        app:srcCompat="@drawable/liked_heart" />
 
     <TextView
         android:id="@+id/event_view_interest_count"
