--- a/app/src/main/res/layout/home_fragment.xml
+++ b/app/src/main/res/layout/home_fragment.xml
@@ -15,12 +15,14 @@
         <com.google.android.material.appbar.CollapsingToolbarLayout
                 style="?attr/collapsingToolbarLayoutMediumStyle"
                 android:layout_width="match_parent"
+                app:layout_scrollFlags="scroll|exitUntilCollapsed"
                 android:layout_height="?attr/collapsingToolbarLayoutMediumSize">
 
             <com.google.android.material.appbar.MaterialToolbar
                     android:id="@+id/main_page_toolbar"
                     android:layout_width="match_parent"
                     android:layout_height="?attr/actionBarSize"
+                    app:layout_scrollFlags="scroll|enterAlways"
                     android:elevation="0dp" app:itemIconTint="?attr/colorOnBackground"
                     app:titleTextAppearance="@style/AptosTextAppearance"
                     app:menu="@menu/main_page_topbar_menu"
@@ -32,33 +34,64 @@
 
     </com.google.android.material.appbar.AppBarLayout>
 
-    <TextView
-            android:text="You have %i events today"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/aptos"
-            android:textSize="20sp"
-            android:textStyle="bold"
-            android:paddingStart="8dp"
-            android:paddingEnd="8dp"
-            android:id="@+id/textView5" app:layout_constraintTop_toBottomOf="@+id/appBarLayout2"
-            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"/>
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
             android:id="@+id/swipeRefreshLayout"
             android:layout_width="match_parent"
-            android:layout_height="350dp"
+            android:layout_height="0dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView5">
-
-        <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/listJoinedEvents"
+            app:layout_constraintTop_toBottomOf="@id/appBarLayout2"
+            app:layout_constraintBottom_toBottomOf="parent">
+        <androidx.core.widget.NestedScrollView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginTop="10dp"/>
+                app:layout_behavior="@string/appbar_scrolling_view_behavior">
+            <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
+                                                               android:layout_height="match_parent">
+
+                <TextView
+                        android:text="You have %i events today"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="@font/aptos"
+                        android:textSize="20sp"
+                        android:textStyle="bold"
+                        android:paddingStart="8dp"
+                        android:paddingEnd="8dp"
+                        android:id="@+id/textView5" app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"/>
+
+                <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/listJoinedEvents"
+                        android:layout_width="match_parent"
+                        android:layout_height="350dp"
+                        app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintTop_toBottomOf="@id/textView5"
+                        android:layout_marginTop="10dp"/>
 
 
+                <TextView
+                        android:text="Your upcoming events"
+                        android:layout_width="0dp"
+                        android:fontFamily="@font/aptos"
+                        android:textSize="20sp"
+                        android:textStyle="bold"
+                        android:paddingStart="8dp"
+                        android:paddingEnd="8dp"
+                        android:layout_height="wrap_content" android:id="@+id/textView6"
+                        app:layout_constraintTop_toBottomOf="@id/listJoinedEvents"
+                        app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"/>
+                <androidx.recyclerview.widget.RecyclerView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/futureEvents"
+                        app:layout_constraintTop_toBottomOf="@+id/textView6" app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"/>
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+        </androidx.core.widget.NestedScrollView>
     </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+
     <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
             android:id="@+id/btnCreateEvent"
             android:layout_width="wrap_content"
@@ -68,12 +101,6 @@
             android:text="Create New Event"
             app:icon="@drawable/add_icon"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"/>
-    <TextView
-            android:text="Your upcoming events"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content" android:id="@+id/textView6"
-            app:layout_constraintTop_toBottomOf="@+id/swipeRefreshLayout"
-            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"/>
+            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="24dp"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
